# scQDiff

./: METHODS.md  README.md  README_new.md  README_test.md  THEORY.md  math_overview.md  pyproject.toml  readme_test
examples/: 00_anndata_quickstart.ipynb  01_synthetic_no_velocity.ipynb  02_synthetic_with_velocity.ipynb  03_archetypes_factorization.ipynb  04_fate_conditioned_archetypes.ipynb  05_simulate_trajectories.ipynb  plot_archetypes.py
scqdiff/: __init__.py  losses.py
scqdiff/archetypes/: cellrank.py  decompose.py
scqdiff/comm/: cellphone_db.py
scqdiff/data/: synthetic.py
scqdiff/io/: anndata.py
scqdiff/models/: drift.py
scqdiff/nn/: score_net.py  time_embed.py
scqdiff/pipeline/: train_from_anndata.py
scqdiff/simulate/: trajectories.py
scqdiff/utils/: graph.py
scqdiff/viz/: plot_archetypes.py
