
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scqdiff"
version = "0.1.0"
description = "scQDiff: Schrödinger-Bridge inspired learning of drift fields and regulatory archetypes from single-cell data"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Tommy W. Terooatea"}, {name="David Redd"}]
license = {text = "MIT"}
dependencies = [
  "torch>=2.2",
  "numpy>=1.23",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "tqdm>=4.66",
  "scikit-learn>=1.3",
  "anndata>=0.10",
  "scanpy>=1.9",
  "scvelo>=0.3",
  "cellrank>=2.0",
  "pandas>=2.0",
  "h5py>=3.10",
  "numba>=0.58"
]
